Eliminate a number of unnecessary collection copies.